[gd_scene load_steps=3 format=3 uid="uid://cj6ggx2tss1v3"]

[ext_resource type="Script" path="res://graphs/scatter_graph.gd" id="1_fhnvx"]
[ext_resource type="PackedScene" uid="uid://ywey5g3cusiv" path="res://graphs/graph_grid.tscn" id="2_d2mby"]

[node name="scatter_graph" type="Node2D"]
script = ExtResource("1_fhnvx")
metadata/_edit_group_ = true

[node name="BG" type="ColorRect" parent="."]
offset_right = 300.0
offset_bottom = 300.0
color = Color(0, 0, 0, 1)

[node name="GraphGrid" parent="." instance=ExtResource("2_d2mby")]
position = Vector2(75, 25)
width = 200.0
height = 200.0
line_width_major = 5.0

[node name="YLabel" type="Label" parent="."]
offset_left = 10.0
offset_top = 215.0
offset_right = 190.0
offset_bottom = 241.0
rotation = -1.5708
text = "Value 2"
horizontal_alignment = 1

[node name="XLabel" type="Label" parent="."]
offset_left = 78.0
offset_top = 267.0
offset_right = 270.0
offset_bottom = 293.0
text = "Value 1"
horizontal_alignment = 1

[node name="MaxYValue" type="Label" parent="."]
offset_left = 25.0
offset_top = 15.0
offset_right = 65.0
offset_bottom = 41.0
text = "20.0"
horizontal_alignment = 2

[node name="CenterYValue" type="Label" parent="."]
offset_left = 25.0
offset_top = 112.0
offset_right = 65.0
offset_bottom = 138.0
text = "0.0"
horizontal_alignment = 2

[node name="MinYValue" type="Label" parent="."]
offset_left = 25.0
offset_top = 215.0
offset_right = 65.0
offset_bottom = 241.0
text = "-20.0"
horizontal_alignment = 2

[node name="MaxXValue" type="Label" parent="."]
offset_left = 255.0
offset_top = 230.0
offset_right = 295.0
offset_bottom = 256.0
text = "20.0"
horizontal_alignment = 1

[node name="CenterXValue" type="Label" parent="."]
offset_left = 155.0
offset_top = 230.0
offset_right = 195.0
offset_bottom = 256.0
text = "0.0"
horizontal_alignment = 1

[node name="MinXValue" type="Label" parent="."]
offset_left = 54.0
offset_top = 230.0
offset_right = 94.0
offset_bottom = 256.0
text = "-20.0"
horizontal_alignment = 1
